--- a/jeremythesebib.bib
+++ b/jeremythesebib.bib
@@ -683,6 +683,7 @@ volume = {7},
 year = {2009}
 }
 
+
 @article{Schnack2001,
 abstract = {An algorithm was developed that automatically segments the lateral and third ventricles from T1-weighted 3-D-FFE MR images of the human brain. The algorithm is based upon region-growing and mathematical morphology operators and starts from a coarse binary total brain segmentation, which is obtained from the 3-D-FFE image. Anatomical knowledge of the ventricular system has been incorporated into the method in order to find all constituting parts of the system, even if they are disconnected, and to avoid inclusion of nonventricle cerebrospinal fluid (CSF) regions. A test of the method on a synthetic MR brain image produced a segmentation overlap of 0.98 between the simulated ventricles ("model") and those defined by the algorithm. Further tests were performed on a large data set of 227 1.5 T MR brain images. The algorithm yielded useful results for 98\% of the images. The automatic segmentations had intraclass correlation coefficients of 0.996 for the lateral ventricles and 0.86 for the third ventricle, with manually edited segmentations. Comparison of ventricular volumes of schizophrenia patients compared with those of healthy control subjects showed results in agreement with the literature.},
 author = {Schnack, H G and Hulshoff, Pol H E and Baare, W F and Viergever, M A and Kahn, R S},
@@ -694,6 +695,7 @@ title = {{Automatic segmentation of the ventricular system from MR images of the
 volume = {14},
 year = {2001}
 }
+
 
 @article{Rorden2007,
 abstract = {Measures of brain activation (e.g., changes in scalp electrical potentials) have become the most popular method for inferring brain function. However, examining brain disruption (e.g., examining behavior after brain injury) can complement activation studies. Activation techniques identify regions involved with a task, whereas disruption techniques are able to discover which regions are crucial for a task. Voxel-based lesion mapping can be used to determine relationships between behavioral measures and the location of brain injury, revealing the function of brain regions. Lesion mapping can also correlate the effectiveness of neurosurgery with the location of brain resection, identifying optimal surgical targets. Traditionally, voxel-based lesion mapping has employed the chi-square test when the clinical measure is binomial and the Student's t test when measures are continuous. Here we suggest that the Liebermeister approach for binomial data is more sensitive than the chi-square test. We also suggest that a test described by Brunner and Munzel is more appropriate than the t test for nonbinomial data because clinical and neuropsychological data often violate the assumptions of the t test. We test our hypotheses comparing statistical tests using both simulated data and data obtained from a sample of stroke patients with disturbed spatial perception. We also developed software to implement these tests (MRIcron), made freely available to the scientific community.},
@@ -724,4 +726,289 @@ title = {{Hypertension and cerebral vasoreactivity: A continuous arterial spin l
 volume = {56},
 year = {2010}
 }
+
+@misc{Cipolla2009,
+abstract = {This presentation describes structural and functional properties of the cerebral circulation that are unique to the brain, an organ with high metabolic demands, and the need for tight water and ion homeostasis. Autoregulation is pronounced in the brain, with myogenic, metabolic, and neurogenic mechanisms contributing to maintain relatively constant blood flow during both increases and de- creases in pressure. In addition, unlike peripheral organs where the majority of vascular resistance resides in small arteries and arterioles, large extracranial and intracranial arteries contribute signifi- cantly to vascular resistance in the brain. The prominent role of large arteries in cerebrovascular resistance helps maintain blood flow and protect downstream vessels during changes in perfusion pressure. The cerebral endothelium is also unique in that its barrier properties are in some way more like epithelium than endothelium in the periphery. The cerebral endothelium, known as the blood–brain barrier, has specialized tight junctions that do not allow ions to pass freely and has very low hydraulic conductivity and transcellular transport. This special configuration modifies Starling’s forces in the brain such that ions retained in the vascular lumen oppose water movement due to hy- drostatic pressure. Tight water regulation is necessary in the brain because it has limited capacity for expansion within the skull. Increased intracranial pressure due to vasogenic edema can cause severe neurologic complications and death. This chapter will review these special features of the cerebral circulation and how they contribute to the physiology of the brain.},
+author = {Cipolla, Marilyn J.},
+booktitle = {Colloquium Series on Integrated Systems Physiology: From Molecule to Function},
+doi = {10.4199/C00005ED1V01Y200912ISP002},
+isbn = {9781615040124},
+issn = {2154-560X},
+number = {1},
+pages = {1--59},
+pmid = {21452434},
+title = {{The Cerebral Circulation}},
+volume = {1},
+year = {2009}
+}
+
+@article{Lang2003,
+abstract = {BACKGROUND: It has been suggested that a moving correlation index between mean arterial blood pressure and intracranial pressure, called PRx, can be used to monitor and quantify cerebral vasomotor reactivity in patients with head injury. OBJECTIVES: To validate this index and study its relation with cerebral blood flow velocity and cerebral autoregulation; and to identify variables associated with impairment or preservation of cerebral vasomotor reactivity. METHODS: The PRx was validated in a prospective study of 40 head injured patients. A PRx value of less than 0.3 indicates intact cerebral vasomotor reactivity, and a value of more than 0.3, impaired reactivity. Arterial blood pressure, intracranial pressure, mean cerebral perfusion pressure, and cerebral blood flow velocity, measured bilaterally with transcranial Doppler ultrasound, were recorded. Dynamic cerebrovascular autoregulation was measured using a moving correlation coefficient between arterial blood pressure and cerebral blood flow velocity, the Mx, for each cerebral hemisphere. All variables were compared in patients with intact and impaired cerebral vasomotor reactivity. RESULTS: No correlation between arterial blood pressure or cerebral perfusion pressure and cerebral blood flow velocity was seen in 19 patients with intact cerebral vasomotor reactivity. In contrast, the correlation between these variables was significant in 21 patients with impaired cerebral vasomotor reactivity, whose cerebral autoregulation was reduced. There was no correlation with intracranial pressure, arterial blood pressure, cerebral perfusion pressure, or interhemispheric cerebral autoregulation differences, but the values for these indices were largely within normal limits. CONCLUSIONS: The PRx is valid for monitoring and quantifying cerebral vasomotor reactivity in patients with head injury. This intracranial pressure based index reflects changes in cerebral blood flow and cerebral autoregulatory capacity, suggesting a close link between blood flow and intracranial pressure in head injured patients. This explains why increases in arterial blood pressure and cerebral perfusion pressure may be useful for reducing intracranial pressure in selected head injured patients (those with intact cerebral vasomotor reactivity).},
+author = {Lang, E W and Lagopoulos, J and Griffith, J and Yip, K and Yam, A and Mudaliar, Y and Mehdorn, H M and Dorsch, N W C},
+doi = {10.1136/jnnp.74.8.1053},
+isbn = {0022-3050 (Print)$\backslash$r0022-3050 (Linking)},
+issn = {0022-3050},
+journal = {Journal of neurology, neurosurgery, and psychiatry},
+number = {8},
+pages = {1053--1059},
+pmid = {12876233},
+title = {{Cerebral vasomotor reactivity testing in head injury: the link between pressure and flow.}},
+volume = {74},
+year = {2003}
+}
+
+@article{Rennels1975,
+abstract = {Capillaries in the cat hypothalamus receive axon terminals which are comparable to neurovascular junctions in cerebral and systemic arteries and arterioles. The innervation of capillaries in the central nervous system may be derived from central neurons, in contrast to cerebral arterial vessels, which are supplied by the peripheral autonomic nervous system.},
+author = {Rennels, M L and Nelson, E},
+doi = {10.1002/aja.1001440208},
+issn = {0002-9106},
+journal = {The American journal of anatomy},
+number = {2},
+pages = {233--241},
+pmid = {1180237},
+title = {{Capillary innervation in the mammalian central nervous system: an electron microscopic demonstration.}},
+volume = {144},
+year = {1975}
+}
+
+@misc{Abbott2010,
+abstract = {Neural signalling within the central nervous system (CNS) requires a highly controlled microenvironment. Cells at three key interfaces form barriers between the blood and the CNS: the blood–brain barrier (BBB), blood–CSF barrier and the arachnoid barrier. The BBB at the level of brain microvessel endothelium is the major site of blood–CNS exchange. The structure and function of the BBB is summarised, the physical barrier formed by the endothelial tight junctions, and the transport barrier resulting from membrane transporters and vesicular mechanisms. The roles of associated cells are outlined, especially the endfeet of astrocytic glial cells, and pericytes and microglia. The embryonic development of the BBB, and changes in pathology are described. The BBB is subject to short and long-term regulation, which may be disturbed in pathology. Any programme for drug discovery or delivery, to target or avoid the CNS, needs to consider the special features of the BBB.},
+author = {Abbott, N. Joan and Patabendige, Adjanie A.K. and Dolman, Diana E.M. and Yusof, Siti R. and Begley, David J.},
+booktitle = {Neurobiology of Disease},
+doi = {10.1016/j.nbd.2009.07.030},
+issn = {09699961},
+number = {1},
+pages = {13--25},
+title = {{Structure and function of the blood–brain barrier}},
+volume = {37},
+year = {2010}
+}
+
+@misc{Zlokovic2005,
+abstract = {In contrast to traditional neuroncentric views of Alzheimer's disease (AD), recent findings indicate that neurovascular dysfunction contributes to cognitive decline and neurodegeneration in AD. Here, I propose the neurovascular hypothesis of AD, suggesting that faulty clearance of amyloid ?? peptide (A??) across the blood-brain barrier (BBB), aberrant angiogenesis and senescence of the cerebrovascular system could initiate neurovascular uncoupling, vessel regression, brain hypoperfusion and neurovascular inflammation. Ultimately, this would lead to BBB compromise, to chemical imbalance in the neuronal environment and to synaptic and neuronal dysfunction, injury and loss. Based on the neurovascular hypothesis, I suggest an array of new potential therapeutic approaches that could be developed for AD, to enhance A?? clearance and neurovascular repair, and to protect the neurovascular unit from divergent inducers of injury and apoptosis. ?? 2005 Elsevier Ltd. All rights reserved.},
+author = {Zlokovic, Berislav V.},
+booktitle = {Trends in Neurosciences},
+doi = {10.1016/j.tins.2005.02.001},
+isbn = {0166-2236},
+issn = {01662236},
+number = {4},
+pages = {202--208},
+pmid = {15808355},
+title = {{Neurovascular mechanisms of Alzheimer's neurodegeneration}},
+volume = {28},
+year = {2005}
+}
+
+@article{Wei1993,
+abstract = {Local cerebral blood flow is lowered in many brain areas of the rat by high-dose pentobarbital (50 mg/kg). In the present study, the mechanism of this flow change was examined by measuring the distribution of radiolabeled red blood cells (RBCs) and albumin (RISA) in small parenchymal microvessels and calculating the microvascular distribution spaces and mean transit times of RBCs, RISA, and blood. In most brain areas, pentobarbital slightly decreased the RISA space, modestly increased the RBC space, and did not alter the blood space. The mean transit times of RBCs, RISA, and blood through the perfused microvessels were considerably greater in treated rats than in controls. These findings indicate that the mechanism by which high-dose pentobarbital diminishes local cerebral blood flow in rat brain is, in the main, a lowered linear velocity of plasma and RBC flow through small parenchymal microvessels and not decreased percentage of perfused capillaries (capillary retirement). This response is probably driven mainly by lowered local metabolism and may well entail a slight increase in the number of small microvessels that are perfused by RBCs.},
+author = {Wei, L and Otsuka, T and Acuff, V and Bereczki, D and Pettigrew, K and Patlak, C and Fenstermacher, J},
+doi = {10.1038/jcbfm.1993.63},
+isbn = {0271-678X},
+issn = {0271-678X},
+journal = {Journal of cerebral blood flow and metabolism : official journal of the International Society of Cerebral Blood Flow and Metabolism},
+number = {3},
+pages = {487--497},
+pmid = {8478407},
+title = {{The velocities of red cell and plasma flows through parenchymal microvessels of rat brain are decreased by pentobarbital.}},
+volume = {13},
+year = {1993}
+}
+
+@article{Klein1986,
+abstract = {Previous investigations have established a strong correlation between local cerebral blood flow (LCBF) and local cerebral glucose utilization (LCGU). In the present study the relationship between density of perfused brain capillaries and LCBF or LCGU was investigated in conscious and anesthetized rats. Perfused capillaries were stained by labeling the plasma with the gamma globulin-coupled fluorochromes, fluorescein isothiocyanate (FITC) and lissamine-rhodamine B 200 (RB 200). The density of perfused capillaries was determined in 12 different brain structures by fluorescence microscopy of embedded brain sections following coronal sectioning in a cryostat. Significant differences were found among brain structures investigated; the lowest density of perfused capillaries was found in the white matter (e.g., corpus callosum 162 fragments/mm2), whereas the highest values were determined in the structures of the auditory system (e.g., inferior colliculus 810 fragments/mm2). LCBF and LCGU were measured in two separate groups of rats using standard autoradiographic methods. In all three experimental groups, the same structures were identified and measured with a high degree of accuracy and local resolution. Density of perfused capillaries correlated well with LCBF (r = 0.93) and even better with LCGU (r = 0.97). In addition to the relationship between LCGU and LCBF established by earlier studies, these data show the intimate interrelationship between LCGU, density of perfused capillaries, and LCBF.},
+author = {Klein, B and Kuschinsky, W and Schr\"{o}ck, H and Vetterlein, F},
+issn = {0002-9513},
+journal = {The American journal of physiology},
+number = {6 Pt 2},
+pages = {H1333--H1340},
+pmid = {3098116},
+title = {{Interdependency of local capillary density, blood flow, and metabolism in rat brains.}},
+volume = {251},
+year = {1986}
+}
+
+@article{Greitz1992,
+abstract = {Brain tissue movements were studied in axial, sagittal and coronal planes in 15 healthy volunteers, using a gated spin echo MRI sequence. All movements had characteristics different from those of perfusion and diffusion. The highest velocities occurred during systole in the basal ganglia (maximum 1.0 mm/s) and brain stem (maximum 1.5 mm/s). The movements were directed caudally, medially and posteriorly in the basal ganglia, and caudally-anteriorly in the pons. Caudad and anterior motion increased towards the foramen magnum and towards the midline. The resultant movement occurred in a funnel-shaped fashion as if the brain were pulled by the spinal cord. This may be explained by venting of brain and cerebrospinal fluid (CSF) through the tentorial notch and foramen magnum. The intracranial volume is assumed to be always constant by the Monro-Kellie doctrine. The intracranial dynamics can be viewed as an interplay between the spatial requirements of four main components: arterial blood, capillary blood (brain volume), venous blood and CSF. These components could be characterized, and the expansion of the arteries and the brain differentiated, by applying the Monro-Kellie doctrine to every moment of the cardiac cycle. The arterial expansion causes a re-moulding of the brain that enables its piston-like action. The arterial expansion creates the prerequisites for the expansion of the brain by venting CSF to the spinal canal. The expansion of the brain is, in turn, responsible for compression of the ventricular system and hence for the intraventricular flow of CSF.},
+author = {Greitz, D. and Wirestam, R. and Franck, A. and Nordell, B. and Thomsen, C. and Stahlberg, N.},
+doi = {10.1007/BF00596493},
+isbn = {0028-3940 (Print) 0028-3940 (Linking)},
+issn = {00283940},
+journal = {Neuroradiology},
+keywords = {Arterial expansion,Brain motion,Brain volume,Magnetic resonance imaging,Pulsation},
+number = {5},
+pages = {370--380},
+pmid = {1407513},
+title = {{Pulsatile brain movement and associated hydrodynamics studied by magnetic resonance phase imaging. The Monoro-Kellie doctrine revisited}},
+volume = {34},
+year = {1992}
+}
+
+@article{Ekstedt1978,
+abstract = {With the patient in the supine position, the subarachnoidal space was infused with artificial CSF at several constant pressure levels. The resulting flow of liquid was recorded. By draining CSF at a low pressure the CSF production rate was determined. Normal values are given and discussed for (1) the resting pressure, (2) the conductance of the CSF outflow pathways, (3) the formation rate of CSF, (4) the pressure difference across the CSF outflow pathways, and (5) the sagittal sinus pressure. None of the variables showed any age dependence, nor was there any sex difference.},
+author = {Ekstedt, J},
+doi = {10.1136/jnnp.41.4.345},
+isbn = {0022-3050 (Print)$\backslash$r0022-3050 (Linking)},
+issn = {0022-3050},
+journal = {Journal of neurology, neurosurgery, and psychiatry},
+number = {4},
+pages = {345--353},
+pmid = {650242},
+title = {{CSF hydrodynamic studies in man. 2 . Normal hydrodynamic variables related to CSF pressure and flow.}},
+volume = {41},
+year = {1978}
+}
+
+@article{Elsankari2012,
+abstract = {BACKGROUND AND PURPOSE: Recent studies of the organization of the cerebral venous system in healthy subjects using phase contrast magnetic resonance imaging (PC-MRI) show its structural complexity and inter-individual variations. Our objective was to study the venous blood and CSF flows in cerebral venous thrombosis (CVT).$\backslash$n$\backslash$nMATERIALS AND METHODS: PC-MRI sequences were added to brain MRI conventional protocol in 19 patients suspected of CVT, among whom 6 patients had CVT diagnosis confirmed by MR venography. Results were compared with 18 healthy age-matched volunteers (HV).$\backslash$n$\backslash$nRESULTS: In patients without CVT (NoCVT) confirmed by venography, we found heterogeneous individual venous flows, and variable side dominance in paired veins and sinuses, comparable to those in healthy volunteers. In CVT patients, PC-MRI detected no venous flow in the veins and/or sinuses with thrombosis. Arterial flows were preserved. CSF aqueductal and cervical stroke volumes were increased in a patient with secondary cerebral infarction, and decreased in 4 patients with extended thrombosis in the superior sagittal and transverse sinuses. These results suggest the main role of the venous system in the regulation of the dynamic intracranial equilibrium.$\backslash$n$\backslash$nCONCLUSIONS: CVT produces highly individualized pattern of disturbance in venous blood drainage. Complementary to MRI venography, PC-MRI provides non-invasive data about venous blockage consequences on CSF flow disturbances.},
+author = {Elsankari, Souraya and Czosnyka, Marek and Lehmann, Pierre and Meyer, Marc-Etienne and Deramond, Herv\'{e} and Bal\'{e}dent, Olivier},
+doi = {10.4103/2156-7514.99158},
+file = {:home/francois/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Elsankari et al. - 2012 - Cerebral Blood and CSF Flow Patterns in Patients Diagnosed for Cerebral Venous Thrombosis - An Observational S.pdf:pdf},
+issn = {2156-5597},
+journal = {Journal of clinical imaging science},
+keywords = {access this article online,cerebral venous thrombosis,csf,hydrodynamics,pc-mri,quick response code,veins},
+number = {3},
+pages = {41},
+pmid = {22919555},
+title = {{Cerebral Blood and CSF Flow Patterns in Patients Diagnosed for Cerebral Venous Thrombosis - An Observational Study.}},
+url = {http://www.pubmedcentral.nih.gov/articlerender.fcgi?artid=3424687\&tool=pmcentrez\&rendertype=abstract},
+volume = {2},
+year = {2012}
+}
+
+@article{Maurer2010,
+abstract = {Mass spectrometry has become the gold standard for the identification of proteins in proteomics. In this review, I will discuss the available literature on proteomic experiments that analyze human cerebrospinal fluid (CSF) and brain extracellular fluid (ECF), mostly obtained by cerebral microdialysis. Both materials are of high diagnostic value in clinical neurology, for example, in cerebrovascular disorders like stroke, neurodegenerative diseases like Alzheimer's Disease, Parkinson's Disease, amyotrophic lateral sclerosis (ALS), traumatic brain injury and cerebral infectious and inflammatory disease, such as multiple sclerosis. Moreover, there are standard procedures for sampling. In a number of studies in recent years, biomarkers have been proposed in CSF and ECF for improved diagnosis or to control therapy, based on proteomics and mass spectrometry. I will also discuss the needs for a transition of research-based experimental screening with mass spectrometry to fast and reliable diagnostic instrumentation for clinical use.},
+author = {Maurer, Martin H.},
+doi = {10.1002/mas.20213},
+isbn = {1098-2787 (Electronic)$\backslash$n0277-7037 (Linking)},
+issn = {02777037},
+journal = {Mass Spectrometry Reviews},
+keywords = {Biomarkers,Microdialysis,Neurodegeneration,Neurology,Proteomics,Stroke},
+number = {1},
+pages = {17--28},
+pmid = {19116946},
+title = {{Proteomics of brain extracellular fluid (ECF) and cerebrospinal fluid (CSF)}},
+volume = {29},
+year = {2010}
+}
+
+@article{Segal2001,
+abstract = {A brief outline is given first of the early history of the ventricles and the strange ideas of their functions from Galen to the enlightenment of the Renaissance with the work of Versalius. This is followed by a description of the histology of the choroid plexuses (CP) and discussion on the functions of the choroid plexus and on the composition of cerebrospinal fluid (CSF). The methods of measuring the rate of secretion of CSF will be outlined and the possible nutritive functions of the choroid plexuses will be considered. The role of the choroid plexuses in the control of the concentration of glucose and amino acids in CSF will be compared with data from in vitro experiments to that from the isolated vascularly perfused choroid plexuses. The handling of peptides and proteins by the CP and the synthesis of these molecules by this tissue is then discussed and the effects of lead on the synthesis of transthyretin by this tissue. Finally, reference will be made to the extensive neuro-endocrine role of the CP and efflux systems across the tissue for lipid soluble molecules.},
+author = {Segal, Malcolm B.},
+doi = {10.1002/1097-0029(20010101)52:1<38::AID-JEMT6>3.0.CO;2-J},
+isbn = {1059-910X (Print)
+1059-910X (Linking)},
+issn = {1059910X},
+journal = {Microscopy Research and Technique},
+keywords = {Cerebrospinal fluid,Choroid plexus,Transport systems},
+number = {1},
+pages = {38--48},
+pmid = {11135447},
+title = {{Transport of nutrients across the choroid plexus}},
+volume = {52},
+year = {2001}
+}
+
+
+@BOOK{ Bernard2007,
+AUTHOR    = {Bernard,G. and Novel, C. and  Vergnes,R. and Institut de formation en soins infirmiers}, 
+TITLE     = {Soins infirmiers en neurologie et neurochirurgie.},
+PUBLISHER = {Estem Paris},
+YEAR      = {2007}
+}
+
+@article{Carmelo2002,
+abstract = {The brain tamponade represents the final condition of a progressive intracranial pressure (ICP) increase up to values close to arterial blood pressure (BP) producing a reverberating flow pattern in the cerebral arteries with no net flow. This finding implies intracranial volume changes, therefore a full application of the Monro-Kellie doctrine is impossible. To resolve this contradiction, in eight pigs a reversible condition of brain tamponade was produced by infusing saline into a cerebral ventricle. The following parameters were measured: BP in the common carotid artery, ICP by the same needle utilised for the infusion, arterial and venous blood flow velocity (BFV) at, respectively, internal carotid artery (ICA) and sagittal sinus (SS) site by ultrasound technique. When ICP approached carotid BP values, reverberating BFV waves both at ICA and SS site were simultaneously observed. The arterial and venous reverberating waves appeared to be almost exactly superimposable, with a delay of about 40 msec. This synchronism between the pulsatile arterial and venous BFV indicates that the residual pulsation, still occurring at the arterial proximal level, is compensated by a passive compression-distension of the SS with no blood volume (that is net flow) crossing the intracranial vasculature.},
+author = {Carmelo, A and Ficola, A and Fravolini, M L and {La Cava}, M and Maira, G and Mangiola, A},
+isbn = {0065-1419 (Print)$\backslash$r0065-1419 (Linking)},
+issn = {00651419},
+journal = {Acta neurochirurgica. Supplement},
+pages = {112--116},
+pmid = {12168279},
+title = {{ICP and CBF regulation: a new hypothesis to explain the "windkessel" phenomenon.}},
+volume = {81},
+year = {2002}
+}
+
+@article{Wei1982,
+abstract = {The responses of pial arterioles to increased venous pressure were studied in anesthetized cats equipped with cranial windows for the observation of the pial microcirculation. Stable increases in venous pressure consistently induced arteriolar vasodilation, which averaged 6-12\% of the control diameter. The vasodilation occurred when arterial blood pressure was normal and during arterial hypotension induced by bleeding; it also occurred irrespective of whether intracranial pressure was kept constant or was allowed to increase venous hypertension. The results are consistent with the view that autoregulatory adjustments in caliber of pial arterioles are mediated predominantly by metabolic rather than myogenic mechanisms.},
+author = {Wei, E P and Kontos, H A},
+isbn = {0002-9513 (Print)$\backslash$r0002-9513 (Linking)},
+issn = {00029513},
+journal = {The American journal of physiology},
+number = {3},
+pages = {H442--H447},
+pmid = {7114275},
+title = {{Responses of cerebral arterioles to increased venous pressure.}},
+volume = {243},
+year = {1982}
+}
+
+
+@BOOK{ Gaffney2004,
+AUTHOR    = {Gaffney, S. J. }, 
+TITLE     = {Probabilistic curve-aligned clustering and prediction with regression mixture
+models.},
+PUBLISHER = {University of California Irvine},
+YEAR      = {2004}
+}
+
+@article{Calamante2010,
+abstract = {OBJECTIVES: Measurement of perfusion accurately, noninvasively, and with good spatial resolution offers the chance to characterize abnormal tissue in many clinical conditions. Dynamic-susceptibility contrast (DSC) MRI, also known as bolus-tracking MRI, is a dynamic MRI method to measure perfusion and other related hemodynamic parameters. This review article describes the principles involved in perfusion quantification using DSC-MRI as well as discusses the main issues affecting its quantification in patient studies. CONCLUSIONS: It is shown that DSC-MRI is a very powerful technique that provides important information regarding cerebral hemodynamics. The relatively high contrast-to-noise ratio, fast acquisition, and wealth of information available have made DSC-MRI the most commonly used MRI technique for the rapid assessment of the brain hemodynamics in clinical investigations. While very important advances have been achieved in the last 2 decades, there are still some remaining limitations that users should be aware of to avoid misinterpretation of the findings and to make the most of the invaluable information provided by perfusion MRI.},
+author = {Calamante, Fernando},
+doi = {10.1097/RMR.0b013e31821e53f5},
+isbn = {1536-1004 (Electronic)$\backslash$r0899-3459 (Linking)},
+issn = {1536-1004},
+journal = {Topics in magnetic resonance imaging : TMRI},
+number = {2},
+pages = {75--85},
+pmid = {21613873},
+title = {{Perfusion MRI using dynamic-susceptibility contrast MRI: quantification issues in patient studies.}},
+volume = {21},
+year = {2010}
+}
+
+@article{OConnor2011,
+abstract = {Over the last few decades there has been considerable research into quantifying the cerebral microvasculature with imaging, for use in studies of the human brain and various pathologies including cerebral tumours. This review highlights key issues in dynamic contrast-enhanced CT, dynamic contrast-enhanced MRI and arterial spin labelling, the various applications of which are considered elsewhere in this special issue of the British Journal of Radiology.},
+author = {O'Connor, J P B and Tofts, P S and Miles, K A and Parkes, L M and Thompson, G and Jackson, A},
+doi = {10.1259/bjr/55166688},
+isbn = {1748-880X (Electronic)$\backslash$n0007-1285 (Linking)},
+issn = {1748-880X},
+journal = {The British journal of radiology},
+keywords = {Brain,Brain Neoplasms,Brain Neoplasms: diagnosis,Brain: pathology,Brain: radiography,Contrast Media,Contrast Media: diagnostic use,Humans,Image Enhancement,Image Enhancement: methods,Image Processing, Computer-Assisted,Image Processing, Computer-Assisted: methods,Magnetic Resonance Imaging,Magnetic Resonance Imaging: methods,Spin Labels,Tomography, X-Ray Computed,Tomography, X-Ray Computed: methods},
+pages = {S112--20},
+pmid = {22433822},
+title = {{Dynamic contrast-enhanced imaging techniques: CT and MRI.}},
+url = {http://www.pubmedcentral.nih.gov/articlerender.fcgi?artid=3473907\&tool=pmcentrez\&rendertype=abstract},
+volume = {84 Spec No},
+year = {2011}
+}
+
+@article{Gunther2005,
+abstract = {Arterial spin labeling (ASL) can be used to measure perfusion without the use of contrast agents. Due to the small volume fraction of blood vessels compared to tissue in the human brain (typ. 3-5\%) ASL techniques have an intrinsically low signal-to-noise ratio (SNR). In this publication, evidence is presented that the SNR can be improved by using arterial spin labeling in combination with single-shot 3D readout techniques. Specifically, a single-shot 3D-GRASE sequence is presented, which yields a 2.8-fold increase in SNR compared to 2D EPI at the same nominal resolution. Up to 18 slices can be acquired in 2 min with an SNR of 10 or more for gray matter perfusion. A method is proposed to increase the reliability of perfusion quantification using QUIPSS II derivates by acquiring low-resolution maps of the bolus arrival time, which allows differentiation between lack of perfusion and delayed arrival of the labeled blood. For arterial spin labeling, single-shot 3D imaging techniques are optimal in terms of efficiency and might prove beneficial to improve reliability of perfusion quantitation in a clinical setup.},
+author = {G\"{u}nther, M and Oshio, K and Feinberg, D a},
+doi = {10.1002/mrm.20580},
+isbn = {0740-3194},
+issn = {0740-3194},
+journal = {Magnetic resonance in medicine : official journal of the Society of Magnetic Resonance in Medicine / Society of Magnetic Resonance in Medicine},
+keywords = {Adult,Brain Mapping,Cerebrovascular Circulation,Female,Humans,Imaging, Three-Dimensional,Magnetic Resonance Imaging,Male,Middle Aged,Regional Blood Flow,Spin Labels},
+number = {2},
+pages = {491--498},
+pmid = {16032686},
+title = {{Single-shot 3D imaging techniques improve arterial spin labeling perfusion measurements}},
+url = {http://www3.interscience.wiley.com/cgi-bin/resolvedoi?DOI=10.1002/mrm.20580$\backslash$npapers://e10472a9-d7b6-4cc3-b1fd-411b2c1ecba0/Paper/p2225},
+volume = {54},
+year = {2005}
+}
+
+
+
+
+
+
+
+
+
+
+
+
 
